# openISL

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_REVIEW.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  OPEN_SOURCE_STANDARDS.md  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: issue-form.yaml
.github/PULL_REQUEST_TEMPLATE/: pr-template.md
cli/: Cargo.toml
cli/src/: main.rs
cli/src/config/: mod.rs
docs/: TUI_WIREFRAMES.md
docs/cli-commands/: branch.md  checkout.md  diff.md  index.md  log.md  status.md
docs/tui-reference/: tui.md
git/: Cargo.toml
git/src/: command.rs  error.rs  lib.rs  models.rs  operations.rs
git/src/operations/: branch.rs  checkout.rs  commit.rs  diff.rs  editor.rs  hunk.rs  log.rs  remote.rs  smart_log.rs  stage.rs  stash.rs  status.rs  sync.rs  tag.rs
git/src/vcs/: mod.rs
git/tests/: integration_tests.rs  models.rs  repo_detection.rs
templates/issue-templates/: bug.md  feature.md
tui/: Cargo.toml
tui/src/: app.rs  diff.rs  keybindings.rs  lib.rs  main.rs  theme.rs  tree.rs
