[workspace]
members = ["cli", "tui", "stack", "git"]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Bharat <bharat@example.com>"]
license = "MIT"
repository = "https://github.com/bharat94/openISL"
readme = "README.md"
keywords = ["cli", "tui", "git", "stack", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
# Shared workspace dependencies
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.26"
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

[workspace.metadata]
# Add metadata here that applies to all workspace members
