[package]
name = "openisl-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
openisl-git = { path = "../git" }
config = "0.14"
toml = "0.8"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
