[package]
name = "openisl-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
openisl-git = { path = "../git" }
chrono = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
